Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://pv2co.com">
+    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1WBxSR03axhHKTmm_Yyx547mssya8JSxQ/view?usp=sharing">
     <title>Redirecionamento</title>
 </head>
 <body>
