Implement JavaScript redirect instead of meta refresh
Replaced meta refresh with JavaScript redirect.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1WBxSR03axhHKTmm_Yyx547mssya8JSxQ/view?usp=sharing">
     <title>Redirecionamento</title>
+    <script>
+        window.location.replace("https://drive.google.com/file/d/1WBxSR03axhHKTmm_Yyx547mssya8JSxQ/view?usp=sharing");
+    </script>
 </head>
 <body>
     <p>Redirecionando para <a href="https://drive.google.com/file/d/1WBxSR03axhHKTmm_Yyx547mssya8JSxQ/view?usp=sharing">https://drive.google.com/file/d/1WBxSR03axhHKTmm_Yyx547mssya8JSxQ/view?usp=sharing</a>...</p>
